@@ -1,4 +1,5 @@
-255555-feb-2010 - prockguy - unix netplay is now functional; gtk network gui created
+01-march-2010 - adelikat - win32 - a disable movie messages menu item
+25-feb-2010 - prockguy - unix netplay is now functional; gtk network gui created
 24-feb-2010 - prockguy - GTK - added basic movie controls
 24-feb-2010 - prockguy - GTK - added file filters; added Load FDS function
 24-feb-2010 - prockguy - GTK - added palette config dialog
